[gd_scene load_steps=27 format=2]

[ext_resource path="res://images/action_menu.png" type="Texture" id=1]
[ext_resource path="res://scenes/action_menu.gd" type="Script" id=2]
[ext_resource path="res://font/Ritaglio.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/sticky_note.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "add_patty_grill"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=6]
action = "remove_patty__grill_1"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "remove_patty__grill_2"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "remove_patty__grill_3"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventAction" id=12]
action = "remove_patty__grill_4"

[sub_resource type="ShortCut" id=13]
shortcut = SubResource( 12 )

[sub_resource type="InputEventAction" id=16]
action = "add_lettuce_cutting_board"

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 16 )

[sub_resource type="InputEventAction" id=18]
action = "remove_lettuce_cutting_board"

[sub_resource type="ShortCut" id=19]
shortcut = SubResource( 18 )

[sub_resource type="InputEventAction" id=14]
action = "get_burger_bun"

[sub_resource type="ShortCut" id=15]
shortcut = SubResource( 14 )

[sub_resource type="InputEventAction" id=20]
action = "build_burger"

[sub_resource type="ShortCut" id=21]
shortcut = SubResource( 20 )

[sub_resource type="InputEventAction" id=22]
action = "add_cheese"

[sub_resource type="ShortCut" id=23]
shortcut = SubResource( 22 )

[node name="action_menu" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="Label4" type="Label" parent="AnimatedSprite"]
margin_left = 10.0
margin_top = 292.0
margin_right = 162.0
margin_bottom = 315.0
custom_fonts/font = SubResource( 2 )
text = "BUILD BURGER ACTIONS:"

[node name="Label5" type="Label" parent="AnimatedSprite"]
margin_left = 11.0
margin_top = 357.0
margin_right = 163.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 2 )
text = "CURRENT ORDER:"

[node name="Label6" type="Label" parent="AnimatedSprite"]
margin_left = 13.0
margin_top = 381.0
margin_right = 176.0
margin_bottom = 475.0
custom_fonts/font = SubResource( 2 )
text = "HAMBURGER"
autowrap = true

[node name="Label3" type="Label" parent="AnimatedSprite"]
margin_left = 10.0
margin_top = 204.0
margin_right = 150.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 2 )
text = "LETTUCE ACTIONS:"

[node name="Label2" type="Label" parent="AnimatedSprite"]
margin_left = 8.0
margin_top = 96.0
margin_right = 108.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "BURGER BUN ACTIONS:"

[node name="Label7" type="Label" parent="AnimatedSprite"]
margin_left = 9.0
margin_top = 150.0
margin_right = 149.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 2 )
text = "CHEESE ACTIONS:"

[node name="Label" type="Label" parent="AnimatedSprite"]
margin_left = 8.0
margin_top = 8.0
margin_right = 48.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "GRILL ACTIONS:"

[node name="Button" type="Button" parent="."]
margin_left = 8.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 52.0
shortcut = SubResource( 4 )
text = "(q) Add Patty"

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 56.0
margin_right = 161.0
margin_bottom = 70.0
text = "(1-4) Remove Patty"

[node name="Button2" type="Button" parent="."]
margin_left = 56.0
margin_top = 72.0
margin_right = 76.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -168, -32 )
shortcut = SubResource( 7 )
text = "1"

[node name="Button7" type="Button" parent="."]
margin_left = 80.0
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -168, -32 )
shortcut = SubResource( 9 )
text = "2"

[node name="Button8" type="Button" parent="."]
margin_left = 104.0
margin_top = 72.0
margin_right = 124.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -168, -32 )
shortcut = SubResource( 11 )
text = "3"

[node name="Button9" type="Button" parent="."]
margin_left = 128.0
margin_top = 72.0
margin_right = 148.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -168, -32 )
shortcut = SubResource( 13 )
text = "4"

[node name="Button3" type="Button" parent="."]
margin_left = 10.0
margin_top = 228.0
margin_right = 194.0
margin_bottom = 248.0
shortcut = SubResource( 17 )
text = "(e) Add Lettuce"

[node name="Button4" type="Button" parent="."]
margin_left = 10.0
margin_top = 252.0
margin_right = 194.0
margin_bottom = 272.0
shortcut = SubResource( 19 )
text = "(r) Remove Lettuce"

[node name="Button5" type="Button" parent="."]
margin_left = 8.0
margin_top = 120.0
margin_right = 192.0
margin_bottom = 140.0
shortcut = SubResource( 15 )
text = "(w) Get Bun"

[node name="Button6" type="Button" parent="."]
margin_left = 10.0
margin_top = 316.0
margin_right = 194.0
margin_bottom = 336.0
shortcut = SubResource( 21 )
text = "(v) Build Burger"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 74.022, 546.022 )
rotation = -3.10029
texture = ExtResource( 4 )

[node name="Label5" type="Label" parent="."]
margin_left = 30.022
margin_top = 502.022
margin_right = 121.022
margin_bottom = 551.022
rect_rotation = 2.25345
custom_colors/font_color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 2 )
text = "COOK ALL 
MEAT TO 145!!"

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 148.013, 481.013 )
rotation = 0.0838675
texture = ExtResource( 4 )

[node name="Label6" type="Label" parent="."]
margin_left = 107.013
margin_top = 433.013
margin_right = 198.013
margin_bottom = 482.013
rect_rotation = 6.25117
custom_colors/font_color = Color( 0.0745098, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 2 )
text = "PATTY + BUN 
= BURGER"

[node name="Button10" type="Button" parent="."]
margin_left = 10.0
margin_top = 174.0
margin_right = 190.0
margin_bottom = 194.0
shortcut = SubResource( 23 )
text = "(t) Get Cheese"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_Button10_pressed"]
